tests/failing/int_op_float_literal.rgo
int: @/int
add: @/add
exit: @/exit

add(1.5, 2, (res: int){
    exit(0)
})
